Began CSS and JS for colored text.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,13 @@
+/*css
+.correct {
+ color: green;
+}
+.incorrect {
+ color: red;
+}*/
+
+
+
 body {
   color: #3b3a36;
   font-family: 'Josefin Sans';
