--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,25 @@
 body {
-  color: #3b3a36;
+  /*color: #3b3a36;*/
   font-family: 'Ubuntu', sans-serif;
   /*background-color: #FFE1C0;*/
+  color: #412402;
+  background-color: #CDE6F4;
 }
 
 header {
-  background-color: #c0dfd9;
-  /*width: auto;*/
-  border-radius: 10px;
+  background-color: #3B6A83; /*c0dfd9*/
+/*  border-radius: 10px; */
   text-align: center;
   height: 90px;
   /*line-height: 90px; Moves the name down lower in box*/
 }
 
+main {
+  background-color: #9AB6C5;
+}
+
 section {
-  background-color: #e9ece5;
+  /*background-color: #e9ece5;*/
   border-radius: 5px;
   padding: 5px;
   margin: 10px;
@@ -22,7 +27,7 @@ section {
   width: 400px;*/
 }
 
- .info section {
+.info /*section*/ {
    /*display: inline-block;*/
    display: inline-flex;
    width: 31%;
@@ -31,7 +36,7 @@ section {
  }
 
 footer {
-  background-color: #b3c2bf;
+  background-color: #3B6A83 /*b3c2bf*/;
   border-radius: 10px;
   padding: 5px;
   margin: 10px;
@@ -42,7 +47,6 @@ footer div {
   font-size: 12px;
   margin-top: 15px;
 }
-
 .question {
   font-weight: bold;
 }
@@ -57,4 +61,5 @@ footer div {
 }
 #img{
   padding-left: 300px;
+  float: inline-end;
 }
